# empowerchain-dapp

cosmwasm/: Cargo.toml
cosmwasm/contracts/plastic-credit-marketplace/src/: execute.rs
cosmwasm/contracts/plastic-credit-wrap/: Cargo.toml
cosmwasm/contracts/plastic-credit-wrap-copy/: Cargo.toml  proposal.json
cosmwasm/contracts/plastic-credit-wrap-copy/schema/: code.txt
cosmwasm/contracts/plastic-credit-wrap-copy/src/: contract_tests.rs  execute.rs  msg.rs  multi_tests.rs  query.rs
cosmwasm/contracts/plastic-credit-wrap/src/: contract_tests.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
