[package]
name = "plastic-credit-swap"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
cosmos-sdk-proto = { workspace = true, default-features = false }
prost = { workspace = true }
prost-types = { workspace = true }
fee-splitter = { workspace = true }
cw721-base = { workspace = true }


[dev-dependencies]
cw-multi-test = { workspace = true }
cosmwasm-check = "1.5.0"


[lib]
crate-type = ["cdylib", "rlib"]
